--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,26 @@
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .hero {
-  min-height: 100vh;
+  height: 100vh;
+  min-height: max-content;
   background-size: cover;
   background-position: center center;
+}
+
+.hero .overlay {
+  background-color: rgba(0, 0, 0, 0.584);
+  height: 100%;
+}
+
+.text {
+  max-width: 1000px;
+}
+
+.serv {
+  object-fit: cover;
+  object-position: center center;
+  height: 250px;
+  width: 100%;
 }
