--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,13 @@
   font-family: "Poppins", sans-serif;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .hero {
   height: 100vh;
   min-height: max-content;
