--- a/public/style.css
+++ b/public/style.css
@@ -7,11 +7,15 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
+  /* display: flex; */
 }
 
 .hero {
-  height: 100vh;
+  height: 100%;
   min-height: max-content;
+  overflow: hidden;
   background-size: cover;
   background-position: center center;
 }
@@ -30,4 +34,10 @@ body {
   object-position: center center;
   height: 250px;
   width: 100%;
+}
+
+main {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
 }
